# Kimera-VIO

./: .clang-format  .cproject  .gitignore  .gitmodules  .linterconfig.yaml  .project  CMakeLists.txt  CMakeSettings.json  Dockerfile  Dockerfile_16_04  Dockerfile_18_04  Dockerfile_20_04  Dockerfile_22_04  Jenkinsfile  LICENSE  Makefile  README.md  THANKS  index.html  install_for_jenkins.bash  linterconfig.yaml  notes.txt  out.txt  package.xml  requirement.json
.patches/: fix_vocab.patch
cmake/: FindGflags.cmake  FindGlog.cmake  FindOpenGV.cmake  GtsamTesting.cmake  KimeraVIOConfig.cmake.in  SparkVioConfig.cmake.in  VerifyGtsamConfig.cmake  Vio_sw_plain.cpp  gflags.cmake  glog.cmake  gtest.cmake  kimera_vioConfig.cmake.in  verifyGtsamConfig.cmake
docs/: BORG_coding_style.xml  developer_guide.md  faq.md  gflags_parameters.md  kimera_vio_debug_evaluation.md  kimera_vio_install.md  kimeravio_debug_evaluation.md  kimeravio_installation.md  linter_install.md  linter_installation.md  sparkvio_installation.md  tips_development.md  tips_usage.md
examples/: KimeraVIO.cpp  OakKimeraVIO.cpp  SparkVio.cpp  plugin.cpp  regularFactorGraphExample.cpp  semanticVIOEuroc.cpp  stereoVIO.cpp  stereoVIOEuroc-planes.cpp  stereoVIOEuroc.cpp  stereoVIOKitti.cpp  stereoVIOSimulation.cpp  stereoVioROS.cpp
include/kimera-vio/frontend/: CMakeLists.txt  Camera.h  CameraParams.h  DepthCameraParams.h  DepthFrame.h  FeatureDetector.h  FeatureSelector.h  Frame.h  FrontendInputPacketBase.h  FrontendOutputPacketBase.h  FrontendType.h  MonoImuSyncPacket.h  MonoVisionFrontEnd-definitions.h  MonoVisionFrontEnd.h  MonoVisionImuFrontend-definitions.h  MonoVisionImuFrontend.h  OdometryParams.h  OpticalFlowPredictor-definitions.h  OpticalFlowPredictor.h  OpticalFlowPredictorFactory.h  RgbdCamera.h  RgbdFrame.h  RgbdImuSyncPacket.h  RgbdVisionImuFrontend-definitions.h  RgbdVisionImuFrontend.h  StereoCamera.h  StereoFrame-definitions.h  StereoFrame.h  StereoImuSyncPacket.h  StereoMatcher.h  StereoMatchingParams.h  StereoVisionFrontEnd-definitions.h  StereoVisionFrontEnd.h  StereoVisionImuFrontend-definitions.h  StereoVisionImuFrontend.h  Tracker-definitions.h  Tracker.h  UndistorterRectifier.h  VioFrontEndParams.h  VisionFrontEnd-definitions.h  (+10 more)
include/kimera-vio/frontend/feature-detector/: CMakeLists.txt  FeatureDetector-definitions.h  FeatureDetector.h  FeatureDetectorParams.h  NonMaximumSuppression.h
include/kimera-vio/frontend/feature-detector/anms/: CMakeLists.txt  LICENSE  anms.h
include/kimera-vio/frontend/feature-detector/anms/range-tree/: lrtypes.h  ranget.h
include/kimera-vio/frontend/optical-flow/: CMakeLists.txt  OpticalFlowPredictor-definitions.h  OpticalFlowPredictor.h  OpticalFlowPredictorFactory.h  OpticalFlowVisualizer.h
include/kimera-vio/frontend/rgbd/: CMakeLists.txt  DepthFrame.h  RgbdCamera.h  RgbdFrame.h  RgbdImuSyncPacket.h
kalibr/: config2kimeravio.py  config2sparkvio.py  config_library.py  kalibr2sparkvio_stereo.py  kalibr2sparkvio_stereo_pinhole-equi.py  kalibr2sparkvio_stereo_pinhole-fov.py  kalibr2sparkvio_stereo_pinhole-radtan.py  realsense_info2sparkvio_pinhole-radtan.py
matlab/: CHECK_RESULT.m  FLIGHT_LENGTHS.m  PLOT_SELECTOR_RESULTS.m  PLOT_SELECTOR_RESULTS_v2.m  PLOT_SELECTOR_RESULTS_v3.m  RUN_FIGUREMAKER.m  RUN_REGRESSION_TESTS.m  RUN_STEREO_VIO.m  aveRelTranErrors_vio_bars.eps  aveRelTranErrors_vio_precentWrtQuality_bars.eps  averageRuns.m  averageRunsFromResultsStruct.m  averageRunsFromResultsStructPerDataset.m  callVisualizeResults.m  createDroneVideo.m  createFeatSelectionVideos.m  createTrackingVideos.m  examplePlotRefFrame.m  figure_reducedPrecision.m  monteCarloRunsCompareSelectors.m  myclc.m  parameterTuning.m  parameterTuningSingle.m  plotDroneTrajectories.m  regressionTests.m  regressionTestsCompareSelectors.m  regressionTestsFigures_paramSweep.m  regressionTestsSimple.m  regressionTestsSimple_plain.m  regressionTestsSimple_selectors.m  regressionTestsSimple_selectors2.m  regressionTestsSimple_video.m  regressionTests_paramSweep.m  rm.bash  testRepeatability.m  trackerParameters.txt  vioAndSelectorTime.eps  vioParameters.txt  visualizeResultsVIO.m  visualizeResultsVIO_video.m
output_logs/: .gitignore
params/: ImuParams.yaml  LCDParameters.yaml  LeftCameraParams.yaml  RightCameraParams.yaml  defaultLCDParameters.yaml  regularVioParameters.yaml  regularVioParametersKitti.yaml  trackerParameters.yaml  trackerParametersKitti.yaml  vioParameters.yaml
python-simulator/: checkData.m
scripts/: clean_stereoVIOEuroc_output.bash  output_landmarks.txt  output_normals.txt  output_timingOverall.csv  python_plotter.py  requirement.json  screenshot_3d_window0  semanticVIOEuroc.bash  spark_vio.bash  stereoVIOEuroc.bash  stereoVIOKitti.bash  stereoVIOOak.bash  testRegularVioBackEnd.bash  yamelize.bash
src/: CameraParams.cpp  CameraParams.h  ETH_parser.cpp  ETH_parser.h  FeatureSelector.cpp  FeatureSelector.h  Frame.h  Histogram.cpp  Histogram.h  ImuFrontEnd-definitions.h  ImuFrontEnd.cpp  ImuFrontEnd.h  Mesher.h  (+41 more)
src/frontend/: CMakeLists.txt  Camera.cpp  CameraParams.cpp  DepthCameraParams.cpp  DepthFrame.cpp  FeatureDetector.cpp  FeatureSelector.cpp  FrontendParams.cpp  MonoImuSyncPacket.cpp  MonoVisionFrontEnd.cpp  MonoVisionImuFrontend.cpp  OdometryParams.cpp  RgbdCamera.cpp  RgbdFrame.cpp  RgbdImuSyncPacket.cpp  RgbdVisionImuFrontend.cpp  StereoCamera.cpp  StereoFrame.cpp  StereoImuSyncPacket.cpp  StereoMatcher.cpp  StereoMatchingParams.cpp  StereoVisionFrontEnd.cpp  StereoVisionImuFrontend.cpp  Tracker.cpp  UndistorterRectifier.cpp  VisionFrontEnd.cpp  VisionFrontEndFactory.cpp  VisionFrontEndModule.cpp  VisionFrontEndParams.cpp  VisionImuFrontend.cpp  VisionImuFrontendModule.cpp  VisionImuFrontendParams.cpp  VisionImuTrackerParams.cpp
src/frontend/feature-detector/: CMakeLists.txt  FeatureDetector.cpp  FeatureDetectorParams.cpp  NonMaximumSuppression.cpp
src/frontend/feature-detector/anms/: CMakeLists.txt  anms.cpp
src/frontend/optical-flow/: CMakeLists.txt  OpticalFlowPredictor.cpp
src/frontend/rgbd/: CMakeLists.txt  RgbdFrame.cpp  RgbdImuSyncPacket.cpp
(+719 files in other folders)
