<?xml version="1.0"?>
<package format="2">
  <name>kimera_vio</name>
  <version>0.0.1</version>
  <description>KimeraVIO</description>

  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>
  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>kimera_rpgo</depend>
  <depend>gflags</depend>
  <depend>glog</depend>
  <depend>gtsam</depend>
  <depend>libopencv-dev</depend>
  <depend>opengv</depend>
  <depend>dbow2</depend>
  <export>
    <!-- Specify that this is not really a catkin package-->
    <build_type>cmake</build_type>
  </export>
</package>
